hphp/hack/test/typecheck/expression_trees/not.php.like_types.exp
File "not.php", line 6, characters 9-13:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 30, characters 5-43:
  But got `dynamic` because it is an unenforceable type
