hphp/hack/test/typecheck/expression_trees/not.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`!false`;
}
